# OT-MP-PSI

./: CMakeLists.txt
benchmark/: Mahdavi_Original_benchmark_5_128_3.txt  Mahdavi_Original_benchmark_5_16_3.txt  Mahdavi_Original_benchmark_5_256_3.txt  Mahdavi_Original_benchmark_5_8_3.txt  Mahdavi_Original_benchmark_6_1024_2.txt  Mahdavi_Original_benchmark_6_1024_4.txt  Mahdavi_Original_benchmark_6_1024_5.txt  Mahdavi_Original_benchmark_6_128_3.txt  Mahdavi_Original_benchmark_6_512_2.txt  Mahdavi_Original_benchmark_6_512_4.txt  Mahdavi_Original_benchmark_6_512_5.txt  Mahdavi_Original_benchmark_6_64_3.txt  Mahdavi_Original_benchmark_6_8_3.txt  Mahdavi_Original_benchmark_7_1024_4.txt  Mahdavi_Original_benchmark_7_2048_4.txt  Mahdavi_Original_benchmark_7_256_4.txt  Mahdavi_Original_benchmark_7_4096_4.txt  Mahdavi_Original_benchmark_8_1024_4.txt  Mahdavi_Original_benchmark_8_128_4.txt  Mahdavi_Original_benchmark_8_16_4.txt  Mahdavi_Original_benchmark_8_2048_4.txt  Mahdavi_Original_benchmark_8_256_4.txt  Mahdavi_Original_benchmark_8_32_4.txt  Mahdavi_Original_benchmark_8_4096_4.txt  Mahdavi_Original_benchmark_8_512_4.txt  Mahdavi_Original_benchmark_8_64_4.txt  Mahdavi_Original_benchmark_8_8_4.txt  Mahdavi_Original_benchmark_9_128_5.txt  Mahdavi_Original_benchmark_9_16_5.txt  Mahdavi_Original_benchmark_9_256_5.txt  Mahdavi_Original_benchmark_9_32_5.txt  Mahdavi_Original_benchmark_9_64_5.txt  Mahdavi_Original_benchmark_9_8_5.txt  Mahdavi_Parallelized_benchmark_5_1024_3.txt  Mahdavi_Parallelized_benchmark_5_128_3.txt  Mahdavi_Parallelized_benchmark_5_2048_3.txt  (+32 more)
(+69 files in other folders)
